# Display-Lock

./: ..gitignore.un~  .appveyor.yml  .gitignore  .gitignore~  .pylintrc  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTING.md~  Display Lock.sln  Display Lock.vcxproj  Display-Lock.sln  Display-Lock.vcxproj  LICENSE  README.md  appveyor.yml  displayLock-win32.aps  index.html  main.c  package-lock.json  package.json  requirements-test.txt  server.js
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  main.yml  pylint.yml
Display-Lock/: CMakeLists.txt  Display-Lock.vcxproj  DisplayLock.c  ui.c  ui.h
Display-Lock/resources/: CMakeLists.txt  resource.aps  resource.h  resource.rc  version.aps  version.h  version.rc
css/: stylesheet.css
dispLib/: CMakeLists.txt  dispLib.vcxproj  update.c
dispLib/include/: applications.h  common.h  header.h  hotkey.h  menu.h  notify.h  settings.h  update.h  win.h
dispLib/src/: applications.c  hotkey.c  menu.c  notify.c  settings.c  update.c  win.c
docs/: index.html
docs/css/: stylesheet.css
include/: applications.h  common.h  header.h  menu.h  notify.h  settings.h  ui.h  update.h  win.h
public/css/: stylesheet.css
resources/: resource.aps  resource.h  resource.rc
scripts/: buildInc.py  build_inc.py  license.txt  licenseHeaders.py  license_headers.py  parseConfig.py  parse_application_config.py  parse_config.py  removeConfig.py
src/: CMakeLists.txt  DisplayLock.c  applications.c  displayLock-win32.aps  displayLock-win32.c  displayLock-win32.h  displayLock-win32.manifest  displayLock-win32.rc  header.h  main.c  menu.c  menu.h  resource.h  settings.c  settings.h  ui.c  update.c  win.c  win.h
src/components/: CMakeLists.txt  applications.c  menu.c  notify.c  settings.c  update.c  win.c
src/procedures/: CMakeLists.txt  about_dialog.c  about_dialog.h  app_settings.c  app_settings.h  update_dialog.c  update_dialog.h
src/resources/: CMakeLists.txt  resource.h  resource.rc  resourceRC.h  version.h  version.rc
tests/: CMakeLists.txt  test_settings.cpp  tests.vcxproj  unittest1.cpp
tests/test_resources/: applications.DLOCK  readTests.md  test1.DLOCK
